--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script type="module" src="script/main.ts"></script>
+    <script type="module" src="script/main.ts" defer></script>
   </head>
   <body>
     <form class="msg-form">
