[Refactor] index.html, main.ts rework
Instead of form A tag will be used so Url wont be relative

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
     <script type="module" src="script/main.ts"></script>
   </head>
   <body>
-    <form class="msg-form">
-      <input class="form-name" type="text" placeholder="Username" required />
-      <input type="submit" />
-    </form>
+    <input class="form-name" type="text" placeholder="Username" required />
+    <a class="msg-href" href="app.html">Enter Chat</a>
   </body>
 </html>
