--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,23 @@
     <script type="module" src="script/main.ts"></script>
   </head>
   <body>
-    <input class="form-name" type="text" placeholder="Username" required />
-    <a class="msg-href" href="app.html">Enter Chat</a>
+    <div class="grid-container">
+      <header></header>
+      <main>
+        <figure class="banner">
+          <h1>Chat</h1>
+        </figure>
+        <article class="article-form">
+          <input
+            class="form-name"
+            type="text"
+            placeholder="Username"
+            required
+          />
+          <a class="msg-href" href="app.html">Enter Chat</a>
+        </article>
+      </main>
+      <footer></footer>
+    </div>
   </body>
 </html>
