[Add] Index.html first pass done. App.html needs more work. Added functionality to clear localstorage and check if its empty and if so send back to index.html

--- a/src/app.html
+++ b/src/app.html
@@ -4,27 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat</title>
+    <title>Chat: App</title>
     <link rel="stylesheet" href="css/style.css" />
     <script type="module" src="script/app.ts"></script>
   </head>
   <body>
     <div class="grid-container">
-      <header></header>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+          </ul>
+          <form class="msg-form">
+            <select class="form-type" required>
+              <option value="Text">Text</option>
+              <option value="ImgUrl">ImgUrl</option>
+            </select>
+            <input
+              class="form-content"
+              type="text"
+              placeholder="Message Content"
+              required
+            />
+            <input class="form-submit" type="submit" />
+          </form>
+        </nav>
+      </header>
       <main>
-        <form class="msg-form">
-          <select class="form-type" required>
-            <option value="Text">Text</option>
-            <option value="ImgUrl">ImgUrl</option>
-          </select>
-          <input
-            class="form-content"
-            type="text"
-            placeholder="Message Content"
-            required
-          />
-          <input type="submit" />
-        </form>
         <article class="article-msg"></article>
       </main>
       <footer></footer>
