--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
+    <title>Chat: Home</title>
     <link rel="stylesheet" href="css/style.css" />
     <script type="module" src="script/main.ts"></script>
   </head>
@@ -13,7 +13,7 @@
       <header></header>
       <main>
         <figure class="banner">
-          <h1>Chat</h1>
+          <p>Chat</p>
         </figure>
         <article class="article-form">
           <input
